Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.4
-
Fix Version/s: 6.3.1, 6.4.0 Beta1
-
Component/s: Multimedia
-
Labels:None
-
Platform/s:
-
Commits:4434905485 (qt/qtmultimedia/dev) 91acf71165 (qt/qtmultimedia/6.3) 99d41ce066 (qt/qtmultimedia/dev) 91acf71165 (qt/tqtc-qtmultimedia/6.3) 99d41ce066 (qt/tqtc-qtmultimedia/dev) 4434905485 (qt/tqtc-qtmultimedia/dev) 3fe9a114ae (qt/qtmultimedia/6.3)
Description
I see such crashes among users crash reports.
Unhandled exception thrown: read access violation.
this->**m_session** was nullptr.
Call stack:
> Qt6Multimedia.dll!MFPlayerSession::createSession() Line 1180 C++ Qt6Multimedia.dll!MFPlayerSession::load(const QUrl & url, QIODevice * stream) Line 217 C++ Qt6Multimedia.dll!QMediaPlayerPrivate::setMedia(const QUrl & media, QIODevice * stream) Line 220 C++ Qt6Multimedia.dll!QMediaPlayer::setSource(const QUrl & source) Line 651 C++ ...