WMF: fix crash when media session can't be created by some reason

Just return early in case MFCreateMediaSession fails.

Fixes: QTBUG-103272
Change-Id: I1ae128198ab4507bb90dab5749a50a5be847353a
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 44349054855e484cdd479a9b54d4183dfc51c654)
Reviewed-by: André de la Rocha <andre.rocha@qt.io>